--- a/usr/index.html
+++ b/usr/index.html
@@ -132,7 +132,7 @@
 					function usrInfo() {
 	    				FB.api('/me', function(response) {
 	      					console.log(response.name + '님 연동 완료');
-	      					$('#userirm').html(response.name+'님').addClass('bb').flash('#55C');
+	      					$('#userirm').html(response.name+'님').addClass('bb');
 	   					});
 	 				}
 					
@@ -172,7 +172,7 @@
 	   					});
 					} // readStream
 					function updateabox(cho) {
-						$('#abox').css('display', 'block').html('').flash("#55C");
+						$('#abox').css('display', 'block').html('').stop().animate({'backgroundColor':'#55C'}, 250).animate({'backgroundColor':'#555'}, 250);
 						for(index in cho) {
 							if(cho[index]>0) 
 								$('#abox').append('<div>'+chodb[index]+' : '+cho[index]+"회</div>");
