--- a/usr/index.html
+++ b/usr/index.html
@@ -132,7 +132,7 @@
 					function usrInfo() {
 	    				FB.api('/me', function(response) {
 	      					console.log(response.name + '님 연동 완료');
-	      					$('#userirm').html(response.name+'님').addClass('bb').animate({'backgroundColor':'#77F'}, 100).animate({'backgroundColor':'transparent'}, 250);
+	      					$('#userirm').html(response.name+'님').addClass('bb').animate({'backgroundColor':'#77F'}, 500).animate({'backgroundColor':'transparent'}, 600);
 	   					});
 	 				}
 					
@@ -172,7 +172,7 @@
 	   					});
 					} // readStream
 					function updateabox(cho) {
-						$('#abox').css('display', 'block').html('').stop().animate({'backgroundColor':'#77F'}, 100).animate({'backgroundColor':'#555'}, 250);
+						$('#abox').css('display', 'block').html('').animate({'backgroundColor':'#77F'}, 100).delay(100).animate({'backgroundColor':'#555'}, 250);
 						for(index in cho) {
 							if(cho[index]>0) 
 								$('#abox').append('<div>'+chodb[index]+' : '+cho[index]+"회</div>");
