--- a/usr/index.html
+++ b/usr/index.html
@@ -24,8 +24,9 @@
 				<br>초성어 및 기호 사용 통계를 내주는
 				<br>아무짝에도 쓸모 없는 서비스입니다.
 				<br><strong>※[베타 서비스] 기능 추가중.</strong>
+				<br>
 				<div id='board'>
-					<time id='since' class='timeago' class='bb'>n년 전</div>부터
+					<time id='since' class='timeago' class='bb'>n년 전</time>부터
 					<br>총 <div id='cnt' class='bb'>n</div>개 글
 					<br><div id='state'>글 통계 중...―</div>
 				</div>
