--- a/usr/index.html
+++ b/usr/index.html
@@ -190,6 +190,7 @@
 							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
 							rotate();
 						}
+						else $('#state').html('통계 완료').addClass('bb');
 					}
 
 					function updateabox(cho) {
