--- a/usr/index.html
+++ b/usr/index.html
@@ -187,8 +187,8 @@
 					} // readStream
 					function rotate() {
 						if (end==false) {
-							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
-							rotate();
+							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼').rotate();
+							
 						}
 						else $('#state').html('통계 완료').addClass('bb');
 					}
