--- a/usr/index.html
+++ b/usr/index.html
@@ -164,8 +164,8 @@
 							
 							sendPosts(response);
 				           	if(response.data.length!=0) {
-				           		//$('time.timeago').attr('datetime', response.data[length-1].created_time).timeago();
-				           		//cnt += response.data.length;
+				           		$('time.timeago').attr('datetime', response.data[length-1].created_time).timeago();
+				           		cnt += response.data.length;
 				           		$("#cnt").html(cnt).animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
 				           		socket.emit('reqres'); console.log('cla reqres');
 				           		nextPage = response.paging.next;
@@ -187,8 +187,8 @@
 					} // readStream
 					function rotate() {
 						if (end==false) {
-							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼').rotate();
-							
+							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
+							setTimeout( function(){rotate();}, 1500);
 						}
 						else $('#state').html('통계 완료').addClass('bb');
 					}
