--- a/usr/index.html
+++ b/usr/index.html
@@ -109,7 +109,7 @@
 									console.log('페이스북 담벼락 불러오기 시작...');
 									readStream();
 									$('#button').slideUp(500).children('a').css('display', 'none');
-									$('#board').css('display', 'block').children('div').css('display', 'inline');
+									$('#board').css('display', 'block').children().css('display', 'inline');
 									rotate();
 	    						}
 
@@ -186,15 +186,14 @@
 	   					});
 					} // readStream
 					function rotate() {
-						if (end==false) {
+						while (end==false) {
 							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
-							setTimeout( function(){rotate();}, 1500);
 						}
 						else $('#state').html('통계 완료').addClass('bb');
 					}
 
 					function updateabox(cho) {
-						$('#abox').css('display', 'block').html('').animate({'backgroundColor':'#77F'}, 100).delay(80).animate({'backgroundColor':'#555'}, 250);
+						$('#abox').css('display', 'block').html('').animate({'backgroundColor':'#77F'}, 100).animate({'backgroundColor':'#555'}, 250);
 						for(index in cho) {
 							if(cho[index]>0) 
 								$('#abox').append('<div>'+chodb[index]+' : '+cho[index]+"회</div>");
