--- a/usr/index.html
+++ b/usr/index.html
@@ -189,7 +189,7 @@
 						while (end==false) {
 							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
 						}
-						else $('#state').html('통계 완료').addClass('bb');
+						$('#state').html('통계 완료').addClass('bb');
 					}
 
 					function updateabox(cho) {
