--- a/usr/index.html
+++ b/usr/index.html
@@ -186,10 +186,12 @@
 	   					});
 					} // readStream
 					function rotate() {
-						while (end==false) {
-							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
-						}
-						$('#state').html('통계 완료').addClass('bb');
+						setInterval(function() {
+							if (end==false) {
+								$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
+							}
+							else $('#state').html('통계 완료').addClass('bb');
+						}, 1500);
 					}
 
 					function updateabox(cho) {
