--- a/usr/index.html
+++ b/usr/index.html
@@ -164,7 +164,7 @@
 							
 							sendPosts(response);
 				           	if(response.data.length!=0) {
-				           		$('#since').html('<time class="timeago">-</time>').children(time).attr('datetime', response.data[length-1].created_time).timeago().animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
+				           		$('#since').html('<time class="timeago">-</time>').children('time').attr('datetime', response.data[length-1].created_time).timeago().animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
 				           		cnt += response.data.length;
 				           		$("#cnt").html(cnt).animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
 				           		socket.emit('reqres'); console.log('cla reqres');
