--- a/usr/index.html
+++ b/usr/index.html
@@ -186,17 +186,15 @@
 	   					});
 					} // readStream
 					function rotate() {
-						setInterval(function() {
-							if (end==false) {
-								$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
-								rotate();
-							}
-							else $('#state').html('통계 완료').addClass('bb');
-						}, 1500);
+						if (end==false) {
+							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
+							setInterval(function(){rotate();}, 1500)
+						}
+						else $('#state').html('통계 완료').addClass('bb');
 					}
 
 					function updateabox(cho) {
-						$('#abox').css('display', 'block').html('').animate({'backgroundColor':'#77F'}, 300).delay(250).animate({'backgroundColor':'#555'}, 400);
+						$('#abox').css('display', 'block').html('').animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'#555'}, 300);
 						for(index in cho) {
 							if(cho[index]>0) 
 								$('#abox').append('<div>'+chodb[index]+' : '+cho[index]+"회</div>");
