--- a/usr/index.html
+++ b/usr/index.html
@@ -188,8 +188,8 @@
 					function rotate() {
 						console.log(end);
 						if (end==false) {
-							$('#state').delay(500).html('글 통계 중...／').delay(500).html('글 통계 중...―').delay(500).html('글 통계 중...＼');
-							setInterval(function(){rotate();}, 1500)
+							$('#state').html('글 통계 중...／').delay(500).queue( function() { $('#state').html('글 통계 중...―').delay(500).queue( function() { $('#state').html('글 통계 중...＼'); rotate(); } ); } );
+							
 						}
 						else $('#state').html('통계 완료').addClass('bb');
 					}
