--- a/usr/index.html
+++ b/usr/index.html
@@ -178,7 +178,7 @@
 				         		//---------통계 끝---------
 				         		end = true; 
 								rotate();
-								$('sharebutton').slideDown().click( function() { share(); });
+								$('#sharebutton').slideDown().click( function() { share(); });
 							}
 		    			};
 	 				
