--- a/usr/index.html
+++ b/usr/index.html
@@ -156,19 +156,6 @@
 		   						post = response.data[element]
 		   						if(post.message) {
 									socket.emit('toserver', { sending : post.message });
-
-									$('#since').html('<time class="timeago">-</time>').children('time').attr('datetime', response.data[length-1].created_time).timeago().animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
-									//시간처리
-					           		cnt += response.data.length;
-					           		$("#cnt").html(cnt).animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
-					           		//카운트처리
-									rotate();
-									//통계중..
-									nextPage = response.paging.next;
-						         	$.getJSON(nextPage, function(json) {
-						         		response = json;
-						         		getPosts(response);
-				         			});
 			 	   				}
 							}
 
@@ -179,6 +166,22 @@
 							
 				           	if(response.data.length!=0) {
 				           		sendPosts(response);
+
+			           			$('#since').html('<time class="timeago">-</time>').children('time').attr('datetime', response.data[length-1].created_time).timeago().animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
+								//시간처리
+				           		cnt += response.data.length;
+				           		$("#cnt").html(cnt).animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
+				           		//카운트처리
+								rotate();
+								//통계중..
+								nextPage = response.paging.next;
+					         	$.getJSON(nextPage, function(json) {
+					         		response = json;
+					         		getPosts(response);
+			         			});
+			         			socket.emit('toserver2');
+
+
 				         	} else { 
 				         		//---------통계 끝---------
 				         		end = true; 
