--- a/usr/index.html
+++ b/usr/index.html
@@ -151,7 +151,7 @@
 						}
 
 		 				function sendPosts(response) {
-		   					var tmpstring;
+		   					var tmpstring='';
 		   					for (element in response.data) {
 		   						if(response.data[element].message)
 		   						tmpstring += response.data[element].message;
@@ -195,7 +195,7 @@
 	 				
 	 					FB.api('/me/feed', getPosts);
 
-	 					socket.on('toclient2', function (data) {
+	 					socket.on('cc', function (data) {
 							console.log(data);
 	   					});
 
