--- a/usr/index.html
+++ b/usr/index.html
@@ -206,7 +206,7 @@
 							console.log(chodb);
 							var cho2 = cho;
 							var chodb2 = chodb;
-							//cho2.sort(function(a,b){return b-a});
+							cho2.sort(function(a,b){return b-a});
 							for(index in cho2) {
 		   						 chodb2[index]= chodb[ cho[index] ];
 		   					}
