--- a/usr/index.html
+++ b/usr/index.html
@@ -211,7 +211,7 @@
 		   						 chodb2[index]= chodb[ cho[index] ];
 		   					}
 
-							updateabox(cho2);
+							updateabox(cho2, chodb2);
 	   					});
 					} // readStream
 					function share() {
@@ -244,11 +244,11 @@
 						} else $('#state').html('통계 완료').addClass('bb');
 					}
 
-					function updateabox(cho) {
+					function updateabox(cho2, chodb2) {
 						$('#abox').css('display', 'block').html('').animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'#555'}, 300);
-						for(index in cho) {
-							if(cho[index]>0) 
-								$('#abox').append('<div>'+chodb[index]+' : '+cho[index]+"회</div>");
+						for(index in cho2) {
+							if(cho2[index]>0) 
+								$('#abox').append('<div>'+chodb2[index]+' : '+cho2[index]+"회</div>");
 						}
 						$('.ani').slideDown(500, function() { $('.ani').removeClass('ani');} );
 					}
