--- a/usr/index.html
+++ b/usr/index.html
@@ -187,7 +187,7 @@
 				         		//---------통계 끝---------
 				         		end = true; 
 								rotate();
-								$('#sharebutton').slideDown().click( function() { share(); });
+								$('#sharebutton').slideDown()..animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400).click( function() { share(); });
 								var total=0;
 								for (index in cho) {
 									total += cho[index];
@@ -205,8 +205,8 @@
 							var cho2 = cho;
 							var chodb2 = chodb;
 							cho2.sort(function(a,b){return b-a});
-							for(index in cho2) {
-		   						 chodb2[index]= chodb[ cho[index] ];
+							for(index in cho) {
+		   						 chodb2[index]= chodb[ chodb.indexOf(cho[index]) ];
 		   					}
 
 							console.log(cho2);
