--- a/usr/index.html
+++ b/usr/index.html
@@ -187,7 +187,7 @@
 				         		//---------통계 끝---------
 				         		end = true; 
 								rotate();
-								$('#sharebutton').slideDown()..animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400).click( function() { share(); });
+								$('#sharebutton').slideDown().animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400).click( function() { share(); });
 								var total=0;
 								for (index in cho) {
 									total += cho[index];
