--- a/usr/index.html
+++ b/usr/index.html
@@ -206,7 +206,7 @@
 							var chodb2 = chodb;
 							cho2.sort(function(a,b){return b-a});
 							for(index in cho) {
-		   						 chodb2[index]= chodb[ chodb.indexOf(cho[index]) ];
+		   						 chodb2[index]= chodb[ cho.indexOf(cho[index]) ];
 		   					}
 
 							console.log(cho2);
