--- a/usr/index.html
+++ b/usr/index.html
@@ -207,9 +207,7 @@
 							cho2.sort(function(a,b){return b-a});
 							for(index in cho2) {
 		   						 chodb2[index]= chodb[ cho.indexOf(cho2[index]) ];
-		   						 cho[cho.indexOf(cho2[index])]=null;
-
-
+		   						 //cho[ cho.indexOf(cho2[index]) ]=null;
 		   					}
 
 							console.log(cho2);
