--- a/usr/index.html
+++ b/usr/index.html
@@ -205,9 +205,11 @@
 							var cho2 = cho;
 							var chodb2 = chodb;
 							cho2.sort(function(a,b){return b-a});
+							
+							console.log(cho2);
 							for(index in cho2) {
 		   						 chodb2[index]= chodb[ cho.indexOf(cho2[index]) ];
-		   						 //cho[ cho.indexOf(cho2[index]) ]=null;
+		   						 cho[ cho.indexOf(cho2[index]) ]=null;
 		   					}
 
 							console.log(cho2);
