--- a/usr/index.html
+++ b/usr/index.html
@@ -204,15 +204,17 @@
 							chodb = data.anal2;
 							var cho2 = cho;
 							var chodb2 = chodb;
+
+							console.log("1"+cho);
 							cho2.sort(function(a,b){return b-a});
-							
-							console.log(cho2);
+
+							console.log("2"+cho);
 							for(index in cho2) {
 		   						 chodb2[index]= chodb[ cho.indexOf(cho2[index]) ];
 		   						 cho[ cho.indexOf(cho2[index]) ]=null;
+								 console.log("3"+cho);
 		   					}
 
-							console.log(cho2);
 							console.log(chodb2);
 							updateabox(cho2, chodb2);
 	   					});
