--- a/usr/index.html
+++ b/usr/index.html
@@ -114,6 +114,9 @@
 									start2();
 
 								} else if (response.status === 'not_authorized') {
+									var uri = '//fbcho.herokuapp.com';
+									window.location = encodeURI("https://www.facebook.com/dialog/oauth?client_id='574466449298482'&redirect_uri="+uri+"&response_type=token");
+									/*
 									FB.login( function(response) { 
 										if(response.authResponse) {
 											start2();
@@ -121,7 +124,7 @@
 											console.log("Authorization Cancelled");
 										}
 									}, {scope: 'read_stream,publish_stream'}
-									);
+									);*/
 								} else {
 									FB.login( function(response) { 
 										if(response.authResponse) {
@@ -204,18 +207,11 @@
 							chodb = data.anal2;
 							var cho2 = cho.slice(0);
 							var chodb2 = chodb.slice(0);
-
-							console.log("1 -"+cho);
 							cho2.sort(function(a,b){return b-a});
-
-							console.log("2 -"+cho);
 							for(index in cho2) {
 		   						 chodb2[index]= chodb[ cho.indexOf(cho2[index]) ];
 		   						 cho[ cho.indexOf(cho2[index]) ]=null;
-								 console.log("3 -"+cho);
 		   					}
-
-							console.log(chodb2);
 							updateabox(cho2, chodb2);
 	   					});
 					} // readStream
