--- a/usr/index.html
+++ b/usr/index.html
@@ -114,7 +114,7 @@
 									start2();
 
 								} else if (response.status === 'not_authorized') {
-									var uri = '//fbcho.herokuapp.com';
+									var uri = 'https://apps.facebook.com/fb-choseong';
 									window.location = encodeURI("https://www.facebook.com/dialog/oauth?client_id='574466449298482'&redirect_uri="+uri+"&response_type=token");
 									/*
 									FB.login( function(response) { 
