--- a/usr/index.html
+++ b/usr/index.html
@@ -115,7 +115,7 @@
 									start2();
 
 								} else if (response.status === 'not_authorized') {
-									function logMeIn()
+									/*function logMeIn()
 									{
 									  var paramsLocation=window.location.toString().indexOf('?');
 									  var params="";
@@ -124,7 +124,7 @@
 
 									  top.location = 'https://graph.facebook.com/oauth/authorize?
 									    client_id=574466449298482&scope=publish_stream&redirect_uri=https://fbcho.herokuapp.com'+params;
-									}
+									}*/
 									//logMeIn();
 									
 									FB.login( function(response) { 
