--- a/usr/index.html
+++ b/usr/index.html
@@ -187,7 +187,7 @@
 								//시간처리
 				           		cnt += response.data.length;
 				           		$("#cnt").html(cnt).animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
-				           		#('#atext').html('담벼락 불러오는 중').slideDown();
+				           		$('#atext').html('담벼락 불러오는 중').slideDown();
 				           		//카운트처리
 								rotate();
 								//통계중..
