--- a/usr/index.html
+++ b/usr/index.html
@@ -168,7 +168,7 @@
 		   					for (element in response.data) {
 		   						if(response.data[element].message) {
 			   						tmpstring += response.data[element].message;
-			   						$('#atext').html(response.data[element].message);
+			   						$('#atext').delay(element*30).html(response.data[element].message);
 			   					}
 		   					}
 		   					
