--- a/usr/index.html
+++ b/usr/index.html
@@ -167,9 +167,9 @@
 		 				function sendPosts(response) {
 		   					var tmpstring='';
 		   					for (element in response.data) {
+		   						$('#atext').html(response.data[0].message);
 		   						if(response.data[element].message) {
 			   						tmpstring += response.data[element].message;
-			   						setTimeout( function() { $('#atext').html(response.data[element].message); }, element*20);
 			   					}
 		   					}
 		   					
