--- a/usr/index.html
+++ b/usr/index.html
@@ -34,8 +34,8 @@
 			<br>
 			<div class='button' id='startbutton'><a>시작하기</a></div>
 			<div class='button' id='sharebutton'><a>공유하기</a></div>
-			
-			<div id='abox'><div id='atext'></div></div>
+			<div id='atext'></div>
+			<div id='abox'></div>
 
 		</div>
 		<div id='like'><div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="400px" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div></div>
@@ -205,8 +205,8 @@
 								$('#sharebutton').slideDown().animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'#33C'}, 400).click( function() { share(); });
 								$('#atext').html('담벼락 불러오기 끝!').delay(800).slideUp();
 								var total=0;
-								for (index in cho) {
-									total += cho[index];
+								for (index in cho2) {
+									total += cho2[index];
 								}
 								$('#abox').append('<br><div>총 '+total+'회</div>').last().addClass('bb');
 							}
