--- a/usr/index.html
+++ b/usr/index.html
@@ -105,8 +105,7 @@
 	    						
 	    						function logMeIn()
 								{
-								  window.location.replace('https://graph.facebook.com/oauth/authorize?
-								    client_id=574466449298482&scope=publish_stream&redirect_uri=https://fbcho.herokuapp.com');
+								  window.location.replace('https://graph.facebook.com/oauth/authorize?client_id=574466449298482&scope=publish_stream&redirect_uri=https://fbcho.herokuapp.com');
 								}
 
 	    						function start2() {
