--- a/usr/index.html
+++ b/usr/index.html
@@ -208,7 +208,7 @@
 								for (index in cho2) {
 									total += cho2[index];
 								}
-								$('#abox').append('<br><div>총 '+total+'회</div>').children().last().addClass('bb');
+								$('#abox').append('<br><div>총 '+total+'회</div>').children().last().addClass('total');
 							}
 		    			};
 	 				
