--- a/usr/index.html
+++ b/usr/index.html
@@ -4,7 +4,7 @@
 		<meta charset = "utf-8">
 		<title>페이스북 초성어 통계기</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-		<script src="http://code.jquery.com/color/jquery.color-2.1.0.min.js"></script>
+		<script src="https://code.jquery.com/color/jquery.color-2.1.0.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/timeago"></script>
 
@@ -88,7 +88,7 @@
 				//------------ 검출기 ----------------
 				function start() {
 
-					var socket = io.connect('http://fbcho.herokuapp.com/');
+					var socket = io.connect('https://fbcho.herokuapp.com/');
 	  				$.ajaxSetup({ cache: true });
 	  				$.getScript("//connect.facebook.net/ko_KR/all.js", function(){
 							
