--- a/usr/index.html
+++ b/usr/index.html
@@ -179,6 +179,7 @@
 						}
 
 	   					var getPosts = function (response){
+	   						console.log(response);
 				           	if(response.data.length!=0) {
 				           		sendPosts(response);
 
