--- a/usr/index.html
+++ b/usr/index.html
@@ -182,8 +182,7 @@
 	   						console.log(response);
 				           	if(response.data.length!=0) {
 				           		sendPosts(response);
-
-			           			$('#since').html('<time class="timeago">-</time>').children('time').attr('datetime', response.data[length-1].created_time).timeago().animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
+			           			$('#since').html('<time class="timeago">-</time>').children('time').attr('datetime', response.data[response.data.length-1].created_time).timeago().animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
 								//시간처리
 				           		cnt += response.data.length;
 				           		$("#cnt").html(cnt).animate({'backgroundColor':'#77F'}, 300).animate({'backgroundColor':'transparent'}, 400);
