--- a/usr/index.html
+++ b/usr/index.html
@@ -38,7 +38,7 @@
 			<div id='abox'></div>
 
 		</div>
-		<div class="fb-like" data-href="fbcho.herokuapp.com" data-width="350px" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div></div>
+		<div class="fb-like" data-href="fbcho.herokuapp.com" data-width="400px" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div></div>
 
 
 		<script>
@@ -48,7 +48,7 @@
 				  var js, fjs = d.getElementsByTagName(s)[0];
 				  if (d.getElementById(id)) return;
 				  js = d.createElement(s); js.id = id;
-				  js.src = "//connect.facebook.net/ko_KR/all.js#xfbml=1&appId=574466449298482";
+				  js.src = "https://connect.facebook.net/ko_KR/all.js#xfbml=1&appId=574466449298482";
 				  fjs.parentNode.insertBefore(js, fjs);
 				}(document, 'script', 'facebook-jssdk'));
 
