--- a/usr/index.html
+++ b/usr/index.html
@@ -20,7 +20,7 @@
 				<div style='font-style:italic; font-size:20px;' class='bb'>어서오세요</div>
 				<br>
 				<div class='bb'>페이스북 초성어 통계기</div>는
-				<br> <div id='userirm'>당신</div>의 담벼락 글을 분석해
+				<br> <div id='userirm'>당신</div>의 스트림 포스팅을 분석해
 				<br>초성어 뿐만 아니라 잡다한 사용 통계를 내주는
 				<br>아무짝에도 쓸모 없는 서비스입니다.
 				<br><strong>※[베타 서비스] 기능 추가중.</strong>
